--- a/css/styles.css
+++ b/css/styles.css
@@ -76,3 +76,6 @@ p{
   vertical-align: top;
 }
 /**************************** Education **************************************/
+.education{
+  margin-left:8px;
+}
